[build-system]
requires=["setuptools>=68"]
build-backend="setuptools.build_meta"
[project]
name="opengrid-sdk"
version="0.1.0"
description="Versioned adapter SDK for OpenGrid"
requires-python=">=3.11"
dependencies=["httpx>=0.27,<1"]
[tool.setuptools.packages.find]
where=["."]
include=["opengrid_sdk*"]
